<package format="2">
  <name>psutil_ros</name>
  <version>2021.08.03192810</version>
  <description>The psutil-ros package</description>

  
  
  
  <maintainer email="admin@probotics.net">sub</maintainer>


  
  
  
  <license>BSD</license>


  
  
  
  


  
  
  
  


  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>python-psutil</exec_depend>

  
  <export>
    

  </export>
</package>